--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "tsc && node server.js",
+    "dev": "next dev",
     "dev:next": "next dev",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node server.js",
@@ -16,9 +16,9 @@
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
     "collaboration:dev": "tsx src/lib/collaboration-server.ts",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -35,6 +35,7 @@
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lib0": "^0.2.114",
@@ -61,13 +62,16 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.13",
+    "@vitest/coverage-v8": "^2.0.5",
+    "chai": "^5.1.1",
     "eslint": "^8",
     "eslint-config-next": "15.5.0",
     "postcss": "^8",
     "prisma": "^5.10.2",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.0.5"
   },
   "engines": {
     "node": ">=18.0.0"
