--- a/package.json
+++ b/package.json
@@ -21,48 +21,63 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@bergfreunde/x-data-spreadsheet": "^2.0.75",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tiptap/core": "^2.26.1",
     "@tiptap/extension-collaboration": "^2.2.4",
     "@tiptap/extension-collaboration-cursor": "^2.26.1",
+    "@tiptap/extension-mention": "^2.26.1",
     "@tiptap/extension-text-align": "^2.26.1",
     "@tiptap/extension-underline": "^2.26.1",
-    "@tiptap/pm": "^2.2.4",
+    "@tiptap/pm": "^2.26.1",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "autoprefixer": "^10.4.21",
-    "class-variance-authority": "^0.7.0",
+    "canvas": "^3.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lib0": "^0.2.114",
     "lucide-react": "^0.468.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.5.0",
     "next-auth": "^4.24.10",
     "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.54",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "sharp": "^0.33.3",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
+    "tippy.js": "^6.3.7",
     "ws": "^8.18.3",
+    "x-data-spreadsheet": "^1.1.9",
+    "xlsx": "^0.18.5",
     "y-websocket": "^1.5.0",
     "yjs": "^13.6.27",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/coverage-v8": "^3.2.4",
     "chai": "^5.1.1",
     "eslint": "^8",
     "eslint-config-next": "15.5.0",
@@ -71,7 +86,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.4",
     "typescript": "^5",
-    "vitest": "^2.0.5"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
