--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "docuforge",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "dev:next": "next dev",
@@ -25,12 +26,21 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "^5.10.2",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.5",
+    "@react-pdf/renderer": "^4.3.0",
     "@tiptap/core": "^2.26.1",
     "@tiptap/extension-collaboration": "^2.2.4",
     "@tiptap/extension-collaboration-cursor": "^2.26.1",
@@ -45,18 +55,21 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "lib0": "^0.2.114",
     "lucide-react": "^0.468.0",
     "multer": "^1.4.5-lts.1",
     "next": "15.5.0",
     "next-auth": "^4.24.10",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^5.4.54",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
+    "react-pdf": "^10.1.0",
     "sharp": "^0.33.3",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
@@ -72,7 +85,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20",
+    "@types/node": "^20.19.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
@@ -84,7 +97,7 @@
     "postcss": "^8",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.4",
+    "tsx": "^4.20.5",
     "typescript": "^5",
     "vitest": "^3.2.4"
   },
