--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "autoprefixer": "^10.4.21",
+    "bcrypt": "^6.0.0",
     "canvas": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -62,7 +63,7 @@
     "next": "15.5.0",
     "next-auth": "^4.24.10",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^3.11.174",
+    "pdfjs-dist": "^5.1.91",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.8",
